Inline blocks that contain text with min-width, box-sizing: border-box incorrectly include the border in width calculation https://bugs.webkit.org/show_bug.cgi?id=234935 <rdar://problem/87217423>

Reviewed by Antti Koivisto.

Source/WebCore:

The block formatting context root takes care of applying the the min/max-width constraints.

Test: fast/inline/min-max-width-and-preferred-width.html

* layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::computedIntrinsicWidthConstraintsForIntegration): remove redundant min/max-width checking.

LayoutTests:

* fast/inline/min-max-width-and-preferred-width-expected.html: Added.
* fast/inline/min-max-width-and-preferred-width.html: Added.



Canonical link: https://commits.webkit.org/245839@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287779 268f45cc-cd09-0410-ab3c-d52691b4dbfc